Update index.html update link to https://mmmax.netlify.app/

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="section-content">
              
                     <p>© כל הזכויות שמורות - 
-                        <a target="_blank" href="https://automatonmax.github.io/homepage/">אוטומקס</a>
+                        <a target="_blank" href="https://mmmax.netlify.app/">אוטומקס</a>
                     </p>
                 </p>
             </div>
